discover ui fixed on small screen

--- a/src/routes/Discover/styles.less
+++ b/src/routes/Discover/styles.less
@@ -135,9 +135,7 @@
         --items-per-row: 5;
 
         .discover-content {
-            grid-template-areas:
-                "pickers-area pickers-area"
-                "meta-items-area meta-items-area";
+            grid-template-columns: 1fr 0;
         }
     }
 }
